# Robot-Arm-for-Sorting-Mechanism-using-ROS-and-YOLOv4

./: .gitattributes  README.md
Aura_robot/: package.xml
Aura_robot/urdf/: Aura_robot.csv
Docker/: Dockerfile  requirements.txt
Docker/scripts/: darknet_publisher.py  only_camera_inference.py  test_subscriber_niryo_inference.py
ROBOT_Cad_Assembly/gripper/: gripper_Assmbly.SLDASM  gripper_clamp.SLDPRT  left_gripper_blade.SLDPRT  right_gripper_blade.SLDPRT
ROS_Master_Package/: Set_Pose_Goal.py  darknet_receiver.py  execute_trajectory_loop.py
ROS_Master_Package/ws_moveit/src/Test_robot_arm_urdf_compiled/: .setup_assistant  CMakeLists.txt
ROS_Master_Package/ws_moveit/src/Test_robot_arm_urdf_compiled/config/: Test_robot_arm_urdf.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ROS_Master_Package/ws_moveit/src/Test_robot_arm_urdf_compiled/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
arduino_code_updated/: arduino_code_updated_hari.ino
arduino_code_updated_hari/: arduino_code_updated_hari.ino
robot_cad_models/: Base.SLDPRT  Base_Link.SLDPRT  Base_assembly.SLDASM  Final_assembly.SLDASM
(+2366 files in other folders)
